--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Poltawski+Nowy:ital,wght@0,400..700;1,400..700&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+
+        <meta property="og:url" content="https://naegyeong2.github.io/251130-wedding-invitation/">
+        <meta property="og:title" content="[2025.11.30]재우 & 내경 결혼합니다">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="공유시 보여질 이미지 경로">
+        <meta property="og:description" content="소중한 분들께 소식 전해드립니다.">
+    
+
 </head>
 
 <body>
@@ -57,42 +65,42 @@
          <!-- 신랑신부 어릴때 사진 -->
          <div id="baby">
              <div class="baby-item">
-                  <img src="images/jw.jpg" alt="재우">
+                  <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/jw.jpg?raw=true" alt="재우">
                   <div class="caption">신랑 정재우 <span>📞</span></div>
              </div>
         <div class="baby-item">
-            <img src="images/ng.jpg" alt="내경">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/ng.jpg?raw=true" alt="내경">
             <div class="caption">신부 이내경 <span>📞</span></div>
         </div>
          </div>
               <!-- 갤러리 컨테이너 -->
     <div class="gallery">
         <div class="gallery-item">
-            <img src="images/image1.jpg" alt="사진 1">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image1.jpg?raw=true" alt="사진 1">
         </div>
         <div class="gallery-item">
-            <img src="images/image2.jpg" alt="사진 2">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image2.jpg?raw=true" alt="사진 2">
         </div>
         <div class="gallery-item">
-            <img src="images/image3.jpg" alt="사진 3">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image3.jpg?raw=true" alt="사진 3">
         </div>
         <div class="gallery-item">
-            <img src="images/image4.jpg" alt="사진 4">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image4.jpg?raw=true" alt="사진 4">
         </div>
         <div class="gallery-item">
-            <img src="images/image5.jpg" alt="사진 5">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image5.jpg?raw=true" alt="사진 5">
         </div>
         <div class="gallery-item">
-            <img src="images/image6.jpg" alt="사진 6">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image6.jpg?raw=true" alt="사진 6">
         </div>
         <div class="gallery-item">
-            <img src="images/image7.jpg" alt="사진 7">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image7.jpg?raw=true" alt="사진 7">
         </div>
         <div class="gallery-item">
-            <img src="images/image8.jpg" alt="사진 8">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image8.jpg?raw=true" alt="사진 8">
         </div>
         <div class="gallery-item">
-            <img src="images/image9.jpg" alt="사진 9">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image9.jpg?raw=true" alt="사진 9">
         </div>
     </div>
 
@@ -122,7 +130,7 @@
             <div class="caption">어머니 신지우 <span>📞</span></div>
         </div>
         <div class="parents-item">
-            <img src="images/신부부모님.jpg" alt="신부부모님">
+            <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/%E1%84%89%E1%85%B5%E1%86%AB%E1%84%87%E1%85%AE%E1%84%87%E1%85%AE%E1%84%86%E1%85%A9%E1%84%82%E1%85%B5%E1%86%B7.jpg?raw=true" alt="신부부모님">
             <div class="caption">아버지 이동규 <span>📞</span></div>
             <div class="caption">어머니 한정순 <span>📞</span></div>
         </div>
@@ -131,7 +139,7 @@
  <!-- 오시는길 -->
 <h3>오시는 길</h3>
 <div class="map">
-    <img src="images/광무지도.png" alt="오시는 길 지도">
+    <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/%E1%84%80%E1%85%AA%E1%86%BC%E1%84%86%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%83%E1%85%A9%20(1).png?raw=true" alt="오시는 길 지도">
 </div>
 <p class="info">
     광명국제무역센터 지하주차장 <strong>2시간 무료 주차</strong> 가능하며<br>
