--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta property="og:url" content="https://naegyeong2.github.io/251130-wedding-invitation/">
         <meta property="og:title" content="[2025.11.30]재우 & 내경 결혼합니다">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="공유시 보여질 이미지 경로">
+        <meta property="og:image" content="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/%E1%84%91%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%B5%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20%E1%84%83%E1%85%A2%E1%84%91%E1%85%AD%E1%84%8B%E1%85%B5%E1%84%86%E1%85%B5%E1%84%8C%E1%85%B5.jpg?raw=true">
         <meta property="og:description" content="소중한 분들께 소식 전해드립니다.">
     
 
