전화기임티뺌

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
     <div id="baby">
       <div class="baby-item">
         <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/jw.jpg?raw=true" alt="재우" />
-        <div class="caption">신랑 정재우 <span>📞</span></div>
+        <div class="caption">신랑 정재우</div>
       </div>
       <div class="baby-item">
         <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/ng.jpg?raw=true" alt="내경" />
-        <div class="caption">신부 이내경 <span>📞</span></div>
+        <div class="caption">신부 이내경</div>
       </div>
     </div>
     <div class="gallery">
@@ -206,13 +206,13 @@
   <div class="parents-list">
     <div class="parents-item">
       <img src="신랑부모님.jpg" alt="신랑부모님" />
-      <div class="caption">아버지 정수경 <span>📞</span></div>
-      <div class="caption">어머니 신지우 <span>📞</span></div>
+      <div class="caption">아버지 정수경</div>
+      <div class="caption">어머니 신지우</div>
     </div>
     <div class="parents-item">
       <img src="신부부모님.jpg" alt="신부부모님" />
-      <div class="caption">아버지 이동규 <span>📞</span></div>
-      <div class="caption">어머니 한정순 <span>📞</span></div>
+      <div class="caption">아버지 이동규</div>
+      <div class="caption">어머니 한정순</div>
     </div>
   </div>
   <!-- 내경 부모님 스크롤 갤러리 -->
