폰트사이즈 수정

--- a/index.html
+++ b/index.html
@@ -275,22 +275,22 @@
     </div>
 
     <div class="parking">
-      <strong>2시간 무료 주차</strong> 제공되며<br />
-      ABC동 관계 없이 편하게 주차하시고<br />
+      
+      단독홀이므로 ABC동 관계 없이 편하게 주차하시고<br />
       3층으로 올라오시면 됩니다.<br />
       <br />
-      주차등록: 3층 로비 웰컴드링크 옆 / 2층 연회장 앞<br />
+      <strong>2시간 무료 주차 / 700대 동시 수용 가능</strong><br />
+      3층 로비와 2층 연회장 앞에서 주차등록 하실 수 있습니다.<br />
     </div>
 
 
 
     <div class="info">
       광명역 내부 광명역사컨벤션이 아닌<br />
-      <strong>광명역 외부 광명무역센터컨벤션</strong>이오니 혼동 없으시길 바랍니다.
+      <strong>광명역 외부 광명무역센터컨벤션</strong>이오니 방문 시 참고 부탁드립니다.
     </div>
     
     <div class="transport-section">
-      <div class="transport-title">대중교통</div>
       <div class="row">
         <span class="bus blue">KTX</span>
         <span class="subway">1</span>
