--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://naegyeong2.github.io/251130-wedding-invitation/" />
   <meta property="og:title" content="[2025.11.30]재우 & 내경 결혼합니다" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/og-image.jpg?raw=true" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/naegyeong2/251130-wedding-invitation/main/og-image.jpg" />
   <meta property="og:description" content="소중한 분들께 소식 전해드립니다." />
 </head>
 <body>
