--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <meta property="og:image" content="https://raw.githubusercontent.com/naegyeong2/251130-wedding-invitation/main/og-image.jpg" />
   <meta property="og:description" content="소중한 분들께 소식 전해드립니다." />
 </head>
+
+
 <body>
   <!-- 메인: 날짜, 시간 등 -->
   <!-- 메인: 날짜/시간 (이미지 버전) -->
@@ -262,12 +264,12 @@
     </script>
 
     <div class="buttons">
-      <button onclick="window.open('https://kko.kakao.com/Gj3dEJkKF0', '_blank')">카카오지도</button>
+      <button onclick="window.open('https://kko.kakao.com/YcZyoJbpN_', '_blank')">카카오지도</button>
       <button onclick="window.open('https://tmap.life/814fc733', '_blank')">티맵</button>
       <button onclick="window.open('https://naver.me/Giawrklf', '_blank')">네이버지도</button>
     </div>
 
-    
+
     <div class="info">
       광명역 내부 광명역사컨벤션이 아닌<br />
       <strong>광명역 외부 광명무역센터컨벤션</strong>이오니 방문 시 참고 부탁드립니다.
@@ -356,17 +358,17 @@
     <div class="dropdown groom-dropdown">
       <div class="dropdown-item">
         <span>정수경</span>
-        <span class="account-bank">신한 110-412-183050</span>
+        <span class="account-bank">신한은행 110-412-183050</span>
         <button class="copy-button" onclick="copyAccount(this)" data-account="신한은행 110-412-183050">복사</button>
       </div>
       <div class="dropdown-item">
         <span>신지우</span>
-        <span class="account-bank">국민 657802-01-008487</span>
+        <span class="account-bank">국민은행 657802-01-008487</span>
         <button class="copy-button" onclick="copyAccount(this)" data-account="국민은행 657802-01-008487">복사</button>
       </div>
       <div class="dropdown-item">
         <span>정재우</span>
-        <span class="account-bank">토스 1000-4176-1802</span>
+        <span class="account-bank">토스뱅크 1000-4176-1802</span>
         <button class="copy-button" onclick="copyAccount(this)" data-account="토스뱅크 1000-4176-1802">복사</button>
       </div>
     </div>
@@ -380,17 +382,17 @@
     <div class="dropdown bride-dropdown">
       <div class="dropdown-item">
         <span>이동규</span>
-        <span class="account-bank">토스 1000-4661-0217</span>
+        <span class="account-bank">토스뱅크 1000-4661-0217</span>
         <button class="copy-button" onclick="copyAccount(this)" data-account="토스뱅크 1000-4661-0217">복사</button>
       </div>
       <div class="dropdown-item">
         <span>한정순</span>
-        <span class="account-bank">농협 109-31-2016382</span>
+        <span class="account-bank">농협은행 109-31-2016382</span>
         <button class="copy-button" onclick="copyAccount(this)" data-account="농협은행 109-31-2016382">복사</button>
       </div>
       <div class="dropdown-item">
         <span>이내경</span>
-        <span class="account-bank">하나 330-910107-83807</span>
+        <span class="account-bank">하나은행 330-910107-83807</span>
         <button class="copy-button" onclick="copyAccount(this)" data-account="하나은행 330-910107-83807">복사</button>
       </div>
     </div>
