캘린더에 추가하기 버튼 링크 다운로드 기능으로 변경

--- a/index.html
+++ b/index.html
@@ -109,7 +109,13 @@
         </table>
       </div>
       <div class="calendar-section">
-        <button class="btn" id="add-calendar">캘린더 추가하기</button>
+        <a class="btn" 
+           href="wedding_event.ics" 
+           type="text/calendar"
+           target="_blank"
+           rel="noopener">
+           캘린더 추가하기
+        </a>
       </div>
     </div>
   </div>
