--- a/index.html
+++ b/index.html
@@ -156,31 +156,31 @@
     <div class="gallery">
       <!-- 갤러리 이미지들 -->
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image1.jpg?raw=true" alt="사진 1" />
+        <img src="image1.JPG" alt="사진 1" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image2.jpg?raw=true" alt="사진 2" />
+        <img src="image2.JPG" alt="사진 2" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image3.jpg?raw=true" alt="사진 3" />
+        <img src="image3.jpg" alt="사진 3" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image4.jpg?raw=true" alt="사진 4" />
+        <img src="image4.jpg" alt="사진 4" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image5.jpg?raw=true" alt="사진 5" />
+        <img src="image5.jpg" alt="사진 5" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image6.jpg?raw=true" alt="사진 6" />
+        <img src="image6.jpg" alt="사진 6" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image7.jpg?raw=true" alt="사진 7" />
+        <img src="image7.jpg" alt="사진 7" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image8.jpg?raw=true" alt="사진 8" />
+        <img src="image8.jpg" alt="사진 8" />
       </div>
       <div class="gallery-item">
-        <img src="https://github.com/naegyeong2/251130-wedding-invitation/blob/main/image9.jpg?raw=true" alt="사진 9" />
+        <img src="image9.jpg" alt="사진 9" />
       </div>
     </div>
     <div class="lightbox" id="lightbox">
