부모님 사진 슬라이드 영역 변경

--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
   <!-- 재우 부모님 스크롤 갤러리 -->
   <div class="scroll-wrapper">
     <div class="scroll-track">
-      <img src="j_pa2.JPG" alt="갤러리2" />
-      <img src="j_pa3.JPG" alt="갤러리3" />
-      <img src="j_pa8.JPG" alt="갤러리8" />
-      <img src="j_pa4.JPG" alt="갤러리4" />
-      <img src="j_pa9.JPG" alt="갤러리9" />
-      <img src="j_pa5.JPG" alt="갤러리5" />
-      <img src="j_pa6.JPG" alt="갤러리6" />
-      <img src="j_pa7.JPG" alt="갤러리7" />
+      <div class="photo-frame"><img src="j_pa2.JPG" alt="갤러리2" /></div>
+      <div class="photo-frame"><img src="j_pa3.JPG" alt="갤러리3" /></div>
+      <div class="photo-frame"><img src="j_pa8.JPG" alt="갤러리8" /></div>
+      <div class="photo-frame"><img src="j_pa4.JPG" alt="갤러리4" /></div>
+      <div class="photo-frame"><img src="j_pa9.JPG" alt="갤러리9" /></div>
+      <div class="photo-frame"><img src="j_pa5.JPG" alt="갤러리5" /></div>
+      <div class="photo-frame"><img src="j_pa6.JPG" alt="갤러리6" /></div>
+      <div class="photo-frame"><img src="j_pa7.JPG" alt="갤러리7" /></div>
     </div>
   </div>
   <div class="parents-list">
@@ -227,7 +227,7 @@
       <div class="caption">어머니 한정순</div>
     </div>
   </div>
-  <!-- 내경 부모님 스크롤 갤러리 -->
+ <!-- 내경 부모님 스크롤 갤러리 -->
   <div class="scroll-wrapper">
     <div class="scroll-track">
       <img src="n_pa0.JPG" alt="갤러리0" />
