이미지 오류 수정

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
     <div class="gallery">
       <!-- 갤러리 이미지들 -->
       <div class="gallery-item">
-        <img src="image1.JPG" alt="사진 1" />
+        <img src="image1.jpg" alt="사진 1" />
       </div>
       <div class="gallery-item">
-        <img src="image2.JPG" alt="사진 2" />
+        <img src="image2.jpg" alt="사진 2" />
       </div>
       <div class="gallery-item">
         <img src="image3.jpg" alt="사진 3" />
