폰트 및 폰트사이즈 조정+직행버스 추가

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
 
 
     <div class="info">
-      광명역 내부 광명역사컨벤션이 아닌<br />
-      <strong>광명역 외부 광명무역센터컨벤션</strong>이오니 방문 시 참고 부탁드립니다.
+      광명무역센터컨벤션은 <strong>광명역 외부</strong>에 위치해 있으며<br />
+      광명역 5번 출구가 가장 가깝습니다.
     </div>
 
 
@@ -305,16 +305,26 @@
         <div class="parking-item">
           <div class="num">01</div>
           <div class="desc">
-            <strong>주차</strong>
+            <strong>주차 안내</strong>
             <p>
-              광명무역컨벤션센터 지하 주차장은 2시간 무료이며,<br />
-              A, B, C동 구분 없이 편리하게 이용하실 수 있습니다.<br /> 
-              700대 동시 주차가 가능합니다.
+              광명무역컨벤션센터 지하 주차장은<br />
+              2시간 무료로 이용 가능하며,<br />
+              약 700대 동시 주차가 가능합니다.
             </p>
           </div>
         </div>
         <div class="parking-item">
           <div class="num">02</div>
+          <div class="desc">
+            <strong>오시는 길</strong>
+            <p>
+              주차장과 3층 홀은 모두 연결되어 있으니<br />
+              A, B, C동 구분 없이 편리하게 이용하실 수 있습니다.<br />
+            </p>
+          </div>
+        </div>
+        <div class="parking-item">
+          <div class="num">03</div>
           <div class="desc">
             <strong>주차 등록</strong>
             <p>
@@ -358,6 +368,11 @@
         <span class="bus brown">공항</span>
         <span class="numbers">6014</span>
       </div>
+
+      <div class="row">
+        <span class="bus red">직행</span>
+        <span class="numbers">8507</span>
+      </div>
     </div>
   </div>
 
@@ -365,7 +380,7 @@
   
   <!-- 계좌번호 복사 (마음 전하실 곳) -->
   <h3>마음 전하실 곳</h3>
-  <p>따뜻한 진심을 감사히 오래도록 잘 간직하겠습니다.</p>
+  <p>따뜻한 진심을 오래도록 잘 간직하겠습니다.</p>
   
   <div class="account-section">
     <button class="btn account-toggle" onclick="toggleDropdown('groom', this)" aria-expanded="false">
