사진 왕창 추가

--- a/index.html
+++ b/index.html
@@ -205,14 +205,39 @@
   <!-- 재우 부모님 스크롤 갤러리 -->
   <div class="scroll-wrapper">
     <div class="scroll-track">
-      <div class="photo-frame"><img src="j_pa2.JPG" alt="갤러리2" /></div>
-      <div class="photo-frame"><img src="j_pa3.JPG" alt="갤러리3" /></div>
-      <div class="photo-frame"><img src="j_pa8.JPG" alt="갤러리8" /></div>
-      <div class="photo-frame"><img src="j_pa4.JPG" alt="갤러리4" /></div>
-      <div class="photo-frame"><img src="j_pa9.JPG" alt="갤러리9" /></div>
-      <div class="photo-frame"><img src="j_pa5.JPG" alt="갤러리5" /></div>
-      <div class="photo-frame"><img src="j_pa6.JPG" alt="갤러리6" /></div>
-      <div class="photo-frame"><img src="j_pa7.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa000.JPG" alt="갤러리2" /></div>
+      <div class="photo-frame"><img src="j_pa00.JPG" alt="갤러리2" /></div>
+      <div class="photo-frame"><img src="j_pa01.JPG" alt="갤러리2" /></div>
+      <div class="photo-frame"><img src="j_pa02.JPG" alt="갤러리2" /></div>
+      <div class="photo-frame"><img src="j_pa03.JPG" alt="갤러리3" /></div>
+      <div class="photo-frame"><img src="j_pa04.JPG" alt="갤러리8" /></div>
+      <div class="photo-frame"><img src="j_pa05.JPG" alt="갤러리4" /></div>
+      <div class="photo-frame"><img src="j_pa06.JPG" alt="갤러리9" /></div>
+      <div class="photo-frame"><img src="j_pa07.JPG" alt="갤러리5" /></div>
+      <div class="photo-frame"><img src="j_pa8.JPG" alt="갤러리6" /></div>
+      <div class="photo-frame"><img src="j_pa9.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa10.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa11.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa12.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa13.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa15.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa16.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa17.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa18.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa19.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa20.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa21.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa27.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa39.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa41.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa42.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa43.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa44.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa45.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa46.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa47.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa48.JPG" alt="갤러리7" /></div>
+      <div class="photo-frame"><img src="j_pa49.JPG" alt="갤러리7" /></div>
     </div>
   </div>
   <div class="parents-list">
@@ -249,6 +274,21 @@
       <img src="n_pa16.JPG" alt="갤러리16" />
       <img src="n_pa17.JPG" alt="갤러리17" />
       <img src="n_pa18.JPG" alt="갤러리18" />
+      <img src="n_pa19.JPG" alt="갤러리18" />
+      <img src="n_pa20.JPG" alt="갤러리18" />
+      <img src="n_pa21.JPG" alt="갤러리18" />
+      <img src="n_pa22.JPG" alt="갤러리18" />
+      <img src="n_pa23.JPG" alt="갤러리18" />
+      <img src="n_pa24.JPG" alt="갤러리18" />
+      <img src="n_pa25.JPG" alt="갤러리18" />
+      <img src="n_pa26.JPG" alt="갤러리18" />
+      <img src="n_pa27.JPG" alt="갤러리18" />
+      <img src="n_pa28.JPG" alt="갤러리18" />
+      <img src="n_pa29.JPG" alt="갤러리18" />
+      <img src="n_pa30.JPG" alt="갤러리18" />
+      <img src="n_pa31.JPG" alt="갤러리18" />
+      <img src="n_pa32.JPG" alt="갤러리18" />
+      <img src="n_pa33.JPG" alt="갤러리18" />
     </div>
   </div>
 </div>
