--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <div class="desc">
             <strong>주차 안내</strong>
             <p>
-              광명무역컨벤션센터 지하 주차장은<br />
+              광명무역샌터컨벤션 지하 주차장은<br />
               2시간 무료로 이용 가능하며,<br />
               약 700대 동시 주차가 가능합니다.
             </p>
